커스텀 완료

--- a/package.json
+++ b/package.json
@@ -10,13 +10,23 @@
     "@types/node": "^16.18.112",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "antd": "^4.20.4",
+    "aos": "^2.3.4",
+    "babel-plugin-styled-components": "^2.0.7",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-image-gallery": "^1.2.8",
+    "styled-components": "^5.3.5"
   },
+  "homepage": "https://chanystar.github.io/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
